[metadata]
name = keeneyed-artificial-general-intelligence-engine
version = 4.1.0
author = Jacob Bodell
author_email = "jacobbodell@gmail.com"
description = A simulation and artificial general intelligence engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs-AI-dev/Keeneyed-4
project_urls = 
  Bug Tracking = https://github.com/cs-AI-dev/Keeneyed-4/issues
classifiers = 
  Programming Language :: Python :: 3
  License :: Keeneyed-4 EULA :: 2.2
  Operating System :: OS Independent
  
[options]
package_dir = 
  = src
packages = find:
python_requires = >= 3.8

[options.packages.finds]
where = src
